# openTrattOS

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.test.yml  docker-compose.yml  mcp-servers.yaml  package-lock.json  package.json  turbo.json
.claude/: settings.json
.gemini/: settings.json
deploy/: .env.example  README.md  cloudflared-ingress-trattos.snippet.yml  docker-compose.prod.yml
docs/: architecture-decisions.md  audit-2026-05-18-ux-roundtable-detail.md  audit-2026-05-18-ux-roundtable.md  audit-2026-05-18-v2-detail-01-dashboard.md  audit-2026-05-18-v2-detail-02-recall.md  audit-2026-05-18-v2-detail-03-haccp.md  audit-2026-05-18-v2-detail-04-ai-obs.md  audit-2026-05-18-v2-detail-05-foto-ingestion.md  audit-2026-05-18-v2-detail-06-compliance.md  audit-2026-05-18-v2-detail-07-auditoria.md  audit-2026-05-18-v2-detail-08-cola-revision.md  audit-2026-05-18-v2-detail-09-settings.md  audit-2026-05-18-v2-detail-10-onboarding.md  audit-2026-05-18-v2-roundtable.md  audit-2026-05-18-v3-detail-01-dashboard.md  audit-2026-05-18-v3-detail-02-recall.md  audit-2026-05-18-v3-detail-03-haccp.md  audit-2026-05-18-v3-detail-04-ai-obs.md  audit-2026-05-18-v3-detail-05-foto-ingestion.md  audit-2026-05-18-v3-detail-06-compliance.md  audit-2026-05-18-v3-detail-07-auditoria.md  audit-2026-05-18-v3-detail-08-cola-revision.md  audit-2026-05-18-v3-detail-09-settings.md  audit-2026-05-18-v3-detail-10-onboarding.md  audit-2026-05-18-v3-roundtable.md  data-model.md  openspec-slice-module-1.md  openspec-slice-module-2.md  openspec-slice-module-3.md  openspec-slice.md  personas-jtbd.md  runbook.md  (+6 more)
tools/rag-corpus/: .env.example  LICENSE_NOTE.md  README.md  pyproject.toml
tools/rag-corpus/scripts/: run_all.sh
tools/rag-corpus/src/rag_corpus/: __init__.py  common.py  ingest_ciaa.py  ingest_escoffier.py  ingest_eu_1169.py  ingest_usda.py
tools/rag-corpus/tests/: test_common.py  test_ingest_ciaa_gating.py  test_ingest_escoffier.py  test_ingest_eu_1169.py  test_ingest_usda.py
tools/rag-proxy/: .dockerignore  .env.example  Dockerfile  LICENSE_NOTE.md  README.md  docker-compose.example.yml  pyproject.toml
tools/rag-proxy/src/rag_proxy/: __init__.py  __main__.py  brave_client.py  config.py  extractor.py  iron_rule.py  lightrag_client.py  main.py  schemas.py
tools/rag-proxy/tests/: conftest.py  test_brave_client.py  test_extractor.py  test_iron_rule.py  test_lightrag_client.py  test_main_e2e.py
(+1285 files in other folders)
